# ripping

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: build.yaml  test.yaml
home/ubuntu/repo/flux-system/: gotk-sync.yaml
snap/: snapcraft.yaml
src/: cli.rs  main.rs  ping.rs
