[package]
name = "ripping"
description = "Ripping is the ping toolbox"
version = "0.2.0"
authors = ["Joe Borg <joe@josephb.org>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://josephb.org"
repository = "https://github.com/joedborg/ripping"
readme = "README.md"

[dependencies]
oping = "0.4.0"
clap = "3.2.25"
cast = "0.3.0"
textplots = "0.8.7"

[profile.release]
opt-level = 3

[badges]
travis-ci = { repository = "joedborg/ripping", branch = "master" }
